--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
+    "@vueuse/components": "^13.1.0",
+    "ant-design-vue": "^4.2.6",
     "axios": "^0.27.2",
     "pinia": "^2.1.7",
     "swiper": "^11.2.6",
     "vue": "^3.4.21",
     "vue-i18n": "10",
-    "vue-router": "^4.3.0",
-    "ant-design-vue": "^4.2.6",
     "vue-quill": "^1.5.1",
-    "@ant-design/icons-vue": "^7.0.1"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
